--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo - Ivan Baptistella</title>
     <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
-        <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     
@@ -21,7 +22,7 @@
     </header>
 
     <main class="introducao">
-        <img src="./img/lobo.jpg" alt="Lobo" width="368" height="368">
+        <img src="./img/eu.jpeg" alt="Eu" width="268">
         <div>
             <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
         </div>
