att imagem e container exp

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main class="introducao">
-        <img src="./img/eu.jpeg" alt="Eu" width="268">
+        <img src="./img/perfil.jpg" alt="Eu" width="360">
         <div>
             <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
         </div>
@@ -41,50 +41,40 @@
 
             <div class="empresa">
                 <span class="empresa-ano">03/2025 - Atual</span>
-                <h3 class="empresa-titulo">Prefeitura Municipal de Itaberá</h3>
-                <span class="empresa-titulo">Auxiliar Administrativo</span>
-                <p class="empresa-texto">Atuação na recepção do posto de saúde, realizando atendimento
-                    ao público, agendamento de consultas, administração de 
-                    prontuários e exames.
+                <div class="titulo">
+                    <h3 class="empresa-titulo">Prefeitura Municipal de Itaberá</h3>
+                    <span class="empresa-titulo">Auxiliar Administrativo</span>
+                </div>
+                <p class="empresa-texto">Atuação na recepção de posto de saúde, realizando atendimento ao público, agendamento de consultas,
+                    organização de prontuários e arquivamento de documentos. Responsável pelo controle e atualização de
+                    cadastros, além de prestar suporte administrativo nas demandas do setor.
                 </p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                </ul>
             </div>
 
             <div class="empresa">
                 <span class="empresa-ano">06/2024 - 03/2025</span>
-                <h3 class="empresa-titulo">Dexco</h3>
-                <span class="empresa-titulo">Auxiliar Administrativo</span>
-                <p class="empresa-texto">Atuação no setor de almoxarifado, realizando controle de estoque,
-                    recebimento e organização de materiais, NFs e requisições de
-                    compra. Auxílio na gestão de inventário e no processo de
+                <div class="titulo">
+                    <h3 class="empresa-titulo">Dexco</h3>
+                    <span class="empresa-titulo">Auxiliar Administrativo</span>
+                </div>
+                <p class="empresa-texto">Controle e Gestão de Inventário do almoxarifado utilizando ERP, além de apoiar nas atividades de
+                    emissão de notas fiscais e requisições de compras. Auxílio na gestão de inventário e no processo de
                     distribuição de materiais para diferentes setores da empresa.
                 </p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
             </div>
 
             <div class="empresa">
-                <span class="empresa-ano">12/2018 - 04/2020</span>
-                <h3 class="empresa-titulo">Fisco Contábil Terra Santa</h3>
-                <span class="empresa-titulo">Estagiario</span>
-                <p class="empresa-texto">Apoio nas atividades contábeis, NFs, conciliação bancária,
-                    impostos e relatórios financeiros. Auxílio no processo de
-                    fechamento contábil e comunicação com clientes.
+                <span class="empresa-ano">12/2018 - 03/2020</span>
+                <div class="titulo">
+                    <h3 class="empresa-titulo">Fisco Contábil Terra Santa</h3>
+                    <span class="empresa-titulo">Analista Contábil</span>
+                </div>
+                <p class="empresa-texto">Responsável pela coleta, processamento e validação de datasets financeiros e fiscais (lançamento de
+                    notas, conciliação) essenciais ao fechamento contábil. Expertise na preparação e análise de dados
+                    complexos para finalidades específicas, incluindo fechamento de Imposto de Renda (IRPJ/CSLL) e a
+                    elaboração de instrumentos contratuais. Foco em garantir a integridade dos dados que suportam a
+                    apuração de resultados.
                 </p>
-                <ul class="empresa-habilidades">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>UX Design</li>
-                </ul>
             </div>
         </div>
     </section>
@@ -141,7 +131,7 @@
             <ul class="footer-contato">
                 <li>ivanbodemberg@gmail.com</li>
                 <li>+55 15 99748-5746</li>
-                <li><a href="/">@ivan_espanha</a></li>
+                <li><a href="https://www.instagram.com/ivan_espanha/">@ivan_espanha</a></li>
             </ul>
             <p class="footer-copy">Todos os direitos reservados.</p>
         </div>
