--- a/index.html
+++ b/index.html
@@ -106,16 +106,18 @@
                     <div class="cursos">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>UX Design <span>56h</span></li>
-                            <li>Front End para Iniciantes <span>56h</span></li>
+                            <li>CSS Flexbox<span>3h</span></li>
+                            <li>Front End para Iniciantes<span>23h</span></li>
+                            <li>Java POO<span>40h</span></li>
+                            <li>UX Design <span>17h</span></li>
                         </ul>
                     </div>
 
                     <div class="idiomas">
                         <h3>Idiomas</h3>
                         <ul>
-                            <li>Espanhol <span> / Fluente</span></li>
-                            <li>Inglês <span> / Intermediário</span></li>
+                            <li>Espanhol <span> / C2 - Fluente</span></li>
+                            <li>Inglês <span> / B2 - Intermediário Avançado</span></li>
                         </ul>
                     </div>
                 </div>
@@ -129,9 +131,10 @@
                 Estou disponível para novos projetos no momento. Entre em contato para marcarmos uma conversa 👋.
             </p>
             <ul class="footer-contato">
-                <li>ivanbodemberg@gmail.com</li>
-                <li>+55 15 99748-5746</li>
-                <li><a href="https://www.instagram.com/ivan_espanha/">@ivan_espanha</a></li>
+                <li><a href="mailto:ivanbodemberg@gmail.com">Email</a></li>
+                <li><a href="https://www.linkedin.com/in/ivanbaptistella/" target="_blank">Linkedin</a></li>
+                <li><a href="https://wa.me/5515997485746?text=Olá Ivan, estou interessado em seu trabalho." target="_blank">+55 15 99748-5746</a></li>
+                <li><a href="https://www.instagram.com/ivan_espanha/" target="_blank">@ivan_espanha</a></li>
             </ul>
             <p class="footer-copy">Todos os direitos reservados.</p>
         </div>
