att infos cursos intensivos

--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
                     <div class="cursos">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>CSS Flexbox<span>3h</span></li>
-                            <li>Front End para Iniciantes<span>23h</span></li>
-                            <li>Java POO<span>40h</span></li>
-                            <li>UX Design <span>17h</span></li>
+                            <li>CSS Flexbox - Origamid<span>3h</span></li>
+                            <li>Discover - Rocketseat<span>12h</span></li>
+                            <li>Front End para Iniciantes - Origamid<span>23h</span></li>
+                            <li>Java POO - Curso em Vídeo<span>40h</span></li>
+                            <li>Python Basico - Bradesco<span>18h</span></li>
+                            <li>UX Design - Origamid<span>17h</span></li>
                         </ul>
                     </div>
 
