--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     
@@ -30,6 +31,10 @@
             <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
         </div>
     </main>
+
+    <a href="#" id="back-to-top" title="Voltar ao Topo">
+    ▲
+    </a>    
 
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
@@ -129,18 +134,26 @@
 
     <footer class="footer" id="contato">
         <div class="footer-container">
-            <p class="footer-texto">
-                Estou disponível para novos projetos no momento. Entre em contato para marcarmos uma conversa 👋.
-            </p>
-            <ul class="footer-contato">
-                <li><a href="mailto:ivanbodemberg@gmail.com">Email</a></li>
-                <li><a href="https://www.linkedin.com/in/ivanbaptistella/" target="_blank">Linkedin</a></li>
-                <li><a href="https://wa.me/5515997485746?text=Olá Ivan, estou interessado em seu trabalho." target="_blank">+55 15 99748-5746</a></li>
-                <li><a href="https://www.instagram.com/ivan_espanha/" target="_blank">@ivan_espanha</a></li>
-            </ul>
-            <p class="footer-copy">Todos os direitos reservados.</p>
+            <div class="info">
+                <p class="footer-texto">
+                    Estou disponível para novos projetos no momento. Entre em contato para marcarmos uma conversa.
+                </p>
+                <ul class="footer-contato">
+                    <div class="icones">
+                        <li><a href="https://www.instagram.com/ivan_espanha/" target="_blank"><img src="img/instagram.svg"></a></li>
+                        <li><a href="https://github.com/ivanbap" target="_blank"><img src="img/github.svg"></a></li>
+                        <li><a href="https://www.linkedin.com/in/ivanbaptistella/" target="_blank"><img src="img/linkedin.svg"></a></li>
+                        <li><a href="https://wa.me/5515997485746?text=Ol%C3%A1%20Ivan,%20estou%20interessado%20em%20seu%20trabalho." target="_blank"><img src="img/whatsapp.svg"></a></li><br>
+                    </div>
+                    <li><a href="mailto:ivanbodemberg@gmail.com">ivanbodemberg@gmail.com</a></li>
+                </ul>
+            </div>
+            <img src="img/divisor.svg" class="divisor">
+            <p class="footer-copy">Alguns direitos reservados.</p>
+            
         </div>
     </footer>
 
+    <script src="/script/script.js"></script>
 </body>
 </html>
